@@ -421,6 +421,9 @@ Release 0.23.0 - Unreleased
     HADOOP-7710. Added hadoop-setup-application.sh for creating 
     application directory (Arpit Gupta via Eric Yang)
 
+    HADOOP-7707. Added toggle for dfs.support.append, webhdfs and hadoop proxy
+    user to setup config script. (Arpit Gupta via Eric Yang)
+
   OPTIMIZATIONS
   
     HADOOP-7333. Performance improvement in PureJavaCrc32. (Eric Caspole
